--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,6 @@
 $main-bg: #fff;
-$main-color: #4267b2;
+// $main-color: #4267b2;
+$main-color: #000;
 
 $txt-main-color: #000;
 $txt-second-color: #8d8d8d;
