--- a/src/sass/components/_hero-slider.scss
+++ b/src/sass/components/_hero-slider.scss
@@ -118,13 +118,13 @@
             }
 
             img {
-                height: 100vh;
+                height: 70vh;
                 position: absolute;
-                bottom: 0;
-                right: 0;
+                bottom: 100px;
+                right: 50px;
                 transform: scale(0) rotate(65deg);
-                transition: transform 0.5s
-                    cubic-bezier(0.175, 0.885, 0.32, 1.275);
+                // transition: transform 0.5s
+                //     cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
                 @include tablet {
                     height: 100%;
@@ -132,26 +132,26 @@
                 }
             }
 
-            .shape {
-                $size: 472px;
-                height: $size;
-                width: $size;
-                position: absolute;
-                right: 0;
-                top: 50%;
-                border-radius: 58% 42% 38% 62% / 42% 55% 45% 58%;
-                transform: translate(0, -50%);
-                transition: border-radius 13s ease;
-                animation: border 10s infinite;
+            // .shape {
+            //     $size: 472px;
+            //     height: $size;
+            //     width: $size;
+            //     position: absolute;
+            //     right: 0;
+            //     top: 50%;
+            //     border-radius: 58% 42% 38% 62% / 42% 55% 45% 58%;
+            //     transform: translate(0, -50%);
+            //     transition: border-radius 13s ease;
+            //     animation: border 10s infinite;
 
-                @include tablet {
-                    $size: 250px;
-                    height: $size;
-                    width: $size;
-                    right: 50%;
-                    transform: translate(50%, -50%);
-                }
-            }
+            //     @include tablet {
+            //         $size: 250px;
+            //         height: $size;
+            //         width: $size;
+            //         right: 50%;
+            //         transform: translate(50%, -50%);
+            //     }
+            // }
         }
 
         &.active &__image > img {
