--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -15,25 +15,28 @@
             transform: translateX(-50%);
             height: 100%;
 
-            &:nth-child(1) {
-                transform: translateX(-50%) scale(1);
-                transition: transform 0.5s ease;
-            }
+            // &:nth-child(1) {
+            //     transform: translateX(-50%) scale(1);
+            //     transition: transform 0.5s ease;
+            // }
 
-            &:nth-child(2) {
-                transform: translateX(-50%) scale(0);
-            }
+            // &:nth-child(2) {
+            //     transform: translateX(-50%) scale(0);
+            // }
         }
 
         &:hover img {
-            &:nth-child(1) {
-                transform: translateX(-50%) scale(0);
-            }
+            // &:nth-child(1) {
+            //     transform: translateX(-50%) scale(0);
+            // }
 
-            &:nth-child(2) {
-                transform: translateX(-50%) scale(1);
-                transition: transform 0.5s ease;
-            }
+            // &:nth-child(2) {
+            //     transform: translateX(-50%) scale(1);
+            //     transition: transform 0.5s ease;
+            // }
+
+            // transition: transform 2s ease;
+            filter: brightness(110%);
         }
     }
 
