--- a/src/sass/components/_hero-slider.scss
+++ b/src/sass/components/_hero-slider.scss
@@ -123,8 +123,8 @@
                 bottom: 100px;
                 right: 50px;
                 transform: scale(0) rotate(65deg);
-                // transition: transform 0.5s
-                //     cubic-bezier(0.175, 0.885, 0.32, 1.275);
+                transition: transform 0.5s
+                    cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
                 @include tablet {
                     height: 100%;
