--- a/src/sass/rating.css
+++ b/src/sass/rating.css
@@ -3,12 +3,13 @@
     padding: 0;
 }
 .rate {
+    position: absolute;
     float: left;
     height: 46px;
-    padding: 0 10px;
+    padding: 0 0px;
 }
 .rate:not(:checked) > input {
-    position: relative;
+    position: absolute;
     top:-9999px; 
 }
 .rate:not(:checked) > label {
