--- a/src/sass/rating.css
+++ b/src/sass/rating.css
@@ -7,10 +7,12 @@
     float: left;
     height: 46px;
     padding: 0 0px;
+  
 }
 .rate:not(:checked) > input {
     position: absolute;
     top:-9999px; 
+    display: none;
 }
 .rate:not(:checked) > label {
     float:right;
