--- a/src/sass/login.css
+++ b/src/sass/login.css
@@ -40,6 +40,15 @@
   box-sizing: border-box;
 }
 
+.Auth-form-input-search {
+  display: inline;
+  width: 75%;
+  padding: 12px 12px;
+  margin-bottom: 10px;
+  /* margin: 0px 0; */
+  box-sizing: border-box;
+}
+
 .Auth-form-button {
   position: relative;
   justify-content: center;
@@ -64,6 +73,40 @@
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  /* font-size: 16px; */
+  margin: 15px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 2px;
+
+  background-color: #000000;
+  color: white;
+}
+
+.Auth-form-button-search {
+  position: relative;
+  justify-content: center;
+
+  padding: 12px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline;
+  /* font-size: 16px; */
+  margin: 15px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 2px;
+
+  background-color: white;
+  color: black;
+  border: 1px solid #555555;
+}
+
+.Auth-form-button-search:hover {
+  padding: 12px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline;
   /* font-size: 16px; */
   margin: 15px 2px;
   transition-duration: 0.4s;
